# Strongtalk

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  NOTES  README.md
src/vm/: main.cpp
src/vm/assembler/: Address.cpp  Address.hpp  Assembler.cpp  Assembler.hpp  CodeBuffer.cpp  Displacement.cpp  IntegerFreeList.cpp  MacroAssembler.cpp
src/vm/code/: CompiledInlineCache.cpp  JumpTable.cpp  JumpTable.hpp  NameDescriptor.cpp  NativeInstruction.cpp  NativeMethod.cpp  NativeMethodScopes.cpp  PolymorphicInlineCache.cpp  ProgramCounterDescriptor.cpp  PseudoRegisterMapping.cpp  StubRoutines.cpp  ZoneHeap.cpp
src/vm/compiler/: BasicBlock.cpp  BasicBlock.hpp  BitVector.cpp  BitVector.hpp  CodeGenerator.cpp  CompileTimeClosure.cpp  CompiledLoop.cpp  Compiler.cpp  CostModel.cpp  DefinitionUsage.cpp  DefinitionUsageInfo.cpp  Expression.cpp  Inliner.cpp  Node.cpp  RecompilationScope.cpp  Scope.cpp  oldCodeGenerator.cpp
src/vm/interpreter/: ByteCodes.cpp  ByteCodes.hpp  CodeIterator.cpp  CodeIterator.hpp  DispatchTable.cpp  DispatchTable.hpp  Floats.cpp  Floats.hpp  HeapCodeBuffer.cpp  HeapCodeBuffer.hpp  InlineCacheIterator.cpp  InlineCacheIterator.hpp  InterpretedInlineCache.cpp  InterpretedInlineCache.hpp  Interpreter.cpp  Interpreter.hpp  InterpreterGenerator.cpp  InterpreterGenerator.hpp  InterpreterStatistics.cpp  InterpreterStatistics.hpp  MethodClosure.cpp  MethodClosure.hpp  MethodInterval.cpp  MethodInterval.hpp  MethodIntervalFactory.cpp  MethodIntervalFactory.hpp  MethodIterator.cpp  MethodIterator.hpp  MethodNode.cpp  MethodNode.hpp  MethodPrinterClosure.cpp  MethodPrinterClosure.hpp  MissingMethodBuilder.cpp  MissingMethodBuilder.hpp  PrettyPrinter.cpp  PrettyPrinter.hpp
src/vm/klass/: AssociationKlass.cpp  AssociationKlass.hpp  BlockClosureKlass.cpp  BlockClosureKlass.hpp  ByteArrayKlass.cpp  ByteArrayKlass.hpp  ContextKlass.cpp  ContextKlass.hpp  DoubleByteArrayKlass.cpp  DoubleByteArrayKlass.hpp  DoubleKlass.cpp  DoubleKlass.hpp  DoubleValueArrayKlass.cpp  DoubleValueArrayKlass.hpp  Klass.cpp  Klass.hpp  KlassKlass.cpp  KlassKlass.hpp  MemOopKlass.cpp  MemOopKlass.hpp  MethodKlass.cpp  MethodKlass.hpp  MixinKlass.cpp  MixinKlass.hpp  ObjectArrayKlass.cpp  ObjectArrayKlass.hpp  ProcessKlass.cpp  ProcessKlass.hpp  ProxyKlass.cpp  ProxyKlass.hpp  SmallIntegerKlass.cpp  SmallIntegerKlass.hpp  SymbolKlass.cpp  SymbolKlass.hpp  VirtualFrameKlass.cpp  VirtualFrameKlass.hpp  WeakArrayKlass.cpp  WeakArrayKlass.hpp
src/vm/lookup/: CacheElement.cpp  CacheElement.hpp  LookupCache.cpp  LookupCache.hpp  LookupKey.cpp  LookupResult.cpp  LookupResult.hpp  LookupType.cpp  LookupType.hpp
src/vm/memory/: AgeTable.cpp  AgeTable.hpp  Array.cpp  Array.hpp  ClassChange.cpp  ClassChange.hpp  Closure.cpp  Closure.hpp  Converter.hpp  Generation.cpp  Generation.hpp  Handle.cpp  Handle.hpp  MarkSweep.cpp  NewGeneration.hpp  OldGeneration.hpp  OopFactory.cpp  OopFactory.hpp  PrintObjectClosure.cpp  PrintObjectClosure.hpp  Reflection.cpp  Reflection.hpp  RememberedSet.cpp  RememberedSet.hpp  Scavenge.hpp  SnapshotDescriptor.cpp  SnapshotDescriptor.hpp  Space.cpp  Space.hpp  SpaceSizes.cpp  SpaceSizes.hpp  SymbolTable.cpp  SymbolTable.hpp  Universe.cpp  Universe.hpp  WaterMark.cpp  WaterMark.hpp  allocation.cpp  util.cpp  util.hpp
src/vm/oop/: AssociationOopDescriptor.cpp  AssociationOopDescriptor.hpp  BlockClosureOopDescriptor.cpp  BlockClosureOopDescriptor.hpp  ByteArrayOopDescriptor.cpp  ByteArrayOopDescriptor.hpp  ContextOopDescriptor.cpp  DoubleByteArrayOopDescriptor.cpp  DoubleByteArrayOopDescriptor.hpp  DoubleOopDescriptor.cpp  DoubleOopDescriptor.hpp  DoubleValueArrayOopDescriptor.cpp  DoubleValueArrayOopDescriptor.hpp  ExpressionStackMapper.cpp  ExpressionStackMapper.hpp  KlassOopDescriptor.cpp  KlassOopDescriptor.hpp  MarkOopDescriptor.cpp  MarkOopDescriptor.hpp  MemOopDescriptor.cpp  MemOopDescriptor.hpp  MethodOopDescriptor.cpp  MethodOopDescriptor.hpp  MixinOopDescriptor.cpp  MixinOopDescriptor.hpp  ObjectArrayOopDescriptor.cpp  ObjectArrayOopDescriptor.hpp  Oop.hpp  OopDescriptor.cpp  ProcessOopDescriptor.cpp  ProcessOopDescriptor.hpp  ProxyOopDescriptor.cpp  ProxyOopDescriptor.hpp  SmallIntegerOopDescriptor.cpp  SmallIntegerOopDescriptor.hpp  SymbolOopDescriptor.cpp  SymbolOopDescriptor.hpp  VirtualFrameOopDescriptor.cpp  VirtualFrameOopDescriptor.hpp  vframeOop.cpp.preserved
src/vm/platform/: logging.hpp  platform.hpp  posix.cpp  posix.hpp
src/vm/primitive/: AlienByteArrayPrimitives.cpp  BehaviorPrimitives.cpp  BehaviorPrimitives.hpp  BitsetPrimitiveDescriptor.hpp  ByteArrayPrimitives.cpp  ByteArrayPrimitives.hpp  CallBackPrimitives.cpp  CallBackPrimitives.hpp  DebugPrimitives.cpp  DebugPrimitives.hpp  DoubleByteArray_primitives.cpp  DoubleOopPrimitives.cpp  DoubleOopPrimitives.hpp  DoubleValueArray_primitives.cpp  GeneratedPrimitives.cpp  InterpretedPrimitiveCache.cpp  InterpretedPrimitiveCache.hpp  MethodOopPrimitives.cpp  MethodOopPrimitives.hpp  MixinOopPrimitives.cpp  MixinOopPrimitives.hpp  ObjectArrayPrimitives.cpp  ObjectArrayPrimitives.hpp  OopPrimitives.cpp  OopPrimitives.hpp  PrimitiveDescriptor.cpp  PrimitiveDescriptor.hpp  PrimitiveGroup.hpp  Primitives.cpp  Primitives.hpp  PrimitivesGenerator.cpp  PrimitivesGenerator.hpp  ProcessOopPrimitives.cpp  ProcessOopPrimitives.hpp  ProxyOopPrimitives.cpp  ProxyOopPrimitives.hpp  SmallIntegerOopPrimitives.cpp  SmallIntegerOopPrimitives.hpp  SystemPrimitives.cpp  SystemPrimitives.hpp  (+8 more)
src/vm/recompiler/: Recompilation.cpp  Recompilation.hpp  RecompilationPolicy.cpp  RecompilationPolicy.hpp  Recompilee.cpp  Recompilee.hpp  RecompilerFrame.cpp  RecompilerFrame.hpp
src/vm/runtime/: Bootstrap.cpp  Bootstrap.hpp  CallBack.cpp  CallBack.hpp  DebugInfo.cpp  DebugInfo.hpp  Delta.cpp  Delta.hpp  DeltaCallCache.cpp  DeltaCallCache.hpp  DeltaProcess.cpp  DeltaProcess.hpp  ErrorHandler.cpp  ErrorHandler.hpp  FlagSettings.cpp  FlagSettings.hpp  FlatProfiler.hpp  Frame.cpp  Frame.hpp  PeriodicTask.cpp  PeriodicTask.hpp  Process.cpp  Process.hpp  ProcessPreemptionTask.cpp  ProcessPreemptionTask.hpp  ProcessState.hpp  Processes.cpp  (+47 more)
(+42 files in other folders)
